--- a/_posts/2015-10-04-DCTF.markdown
+++ b/_posts/2015-10-04-DCTF.markdown
@@ -6,7 +6,7 @@ date:       2015-10-04 17:14:00
 author:     "Heeraj"
 header-img: "img/post-bg-02.jpg"
 ---
-
+<script type='text/javascript' src='//eclkmpbn.com/adServe/banners?tid=98477_161886_3&type=footer&size=468x60'></script>
 <p> If you like to read our old blogs you are welcome, <a href="http://heeraj123.wordpress.com">I4INFO</a> </p>
 
 <p>It was an great CTF, well the web challenges was very good. Our team bi0s secured 30th position in this CTF.</p>
