--- a/_posts/2015-10-15-php.markdown
+++ b/_posts/2015-10-15-php.markdown
@@ -6,7 +6,7 @@ date:       2015-10-15 18:14:00
 author:     "Heeraj"
 header-img: "img/post-bg-02.png"
 ---
-
+<script type='text/javascript' src='//eclkmpbn.com/adServe/banners?tid=98477_161886_3&type=footer&size=468x60'></script>
 <p> If you like to read our old blogs you are welcome, <a href="http://heeraj123.wordpress.com">I4INFO</a> </p>
 
 <p>Ya in this blog I would like to discuss, the ASIS Ctf question "Impossible".I didn't solve this during the competition time, the problem was awesome. </p>
