--- a/_posts/2015-09-13-writeup.markdown
+++ b/_posts/2015-09-13-writeup.markdown
@@ -6,7 +6,7 @@ date:       2015-09-13 5:14:00
 author:     "Heeraj"
 header-img: "img/post-bg-02.jpg"
 ---
-
+<script type='text/javascript' src='//eclkmpbn.com/adServe/banners?tid=98477_161886_3&type=footer&size=468x60'></script>
 <p> If you like to read our old blogs you are welcome, <a href="http://heeraj123.wordpress.com">I4INFO</a> Want to be a member of our team, contact us! </p>
 
 <p>This was something unusual , when I saw it I thought by seeing it would be an injection , tried all the stuff. Didn't work , and was waiting for the writeup in ctftime.</p>
